--- a/rubypedia_frontend/src/index.css
+++ b/rubypedia_frontend/src/index.css
@@ -26,7 +26,8 @@ h1 {
 
 header {
   grid-area: header;
-  background-color: var(--oasis-blue);
+  background-color: purple;
+  color: white;
 }
 
 nav {
@@ -48,7 +49,8 @@ aside {
 
 footer {
   grid-area: footer;
-  background-color: var(--oasis-blue);
+  background-color: purple;
+  color: white;
 }
 .notice {
   border: 5px solid var(--shady-sand);
